Compatibilidad con el mouse

--- a/fonts.css
+++ b/fonts.css
@@ -10,3 +10,6 @@
 
 /* Inter regular */
 @import url('https://api.fonts.coollabs.io/css2?family=Inter&display=swap');
+
+/* Alliance No.1 */
+@import url('http://fonts.cdnfonts.com/css/alliance-no1');
