--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,23 @@
 :root
 {
     --primary-black: #1c1c22;
-    --black: hsla(201, 38%, 40%, 0.26); /* hsl 201,38,40      hsla(237, 28%, 43%, 0.26*/
-    --white: #D0E0FF;
-    --green: #06ee9e;
-    --purple: #5555FF;
-    --bright-green: #00cf67;
+    --black:   hsla(201, 38%, 40%, 0.26); /* hsl 201,38,40      hsla(237, 28%, 43%, 0.26*/
+    --white:   #D0E0FF;
+    --green:   #06ee9e;
+    --purple:  #5555FF;
 }
 body
 {
     background-color: var(--primary-black);
     margin: auto;
     text-align: center;
+    color: var(--green);
 }
 h1
 {
-    color: var(--green);
     text-align: center;
     margin-top: 5rem;
-    font-family: Pilowlava;
+    font-family: 'Pilowlava';
     font-size: 6rem;
 }
 canvas
@@ -26,6 +25,27 @@ canvas
     text-align: center;
     background-color: var(--black);
     border-radius: 0.5rem;
+}
+.arrow-box
+{
+    background-color: var(--black);
+    width: 15%;
+    display: inline-block;
+    border-radius: 1rem;
+    height: 4.5rem;
+    font-size: 3rem;
+    font-family: 'Alliance No.1', sans-serif;
+    vertical-align: middle;
+    margin-right: 1.32rem;
+    padding-top: 0.4rem;
+}
+.arrowbox-container
+{
+    width: 500px;
+    text-align: center;
+    align-self: center;
+    margin: 2rem auto;
+    vertical-align: middle;
 }
 ::selection
 {
