Ancho consistente del input rango

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ img
     border: none;
     background-color: var(--green);
     vertical-align: middle;
-    width:10%;
+    width:5.7rem;
 }
 
 .thick_range
